# kei

./: .editorconfig  .env.example  .gitignore  .vendored-arm64  .vendored-upstream  Cargo.toml  LICENSE-MPL  Makefile  OSDK.toml  PLAN.md  README.md  aarch64.ld  build_dropbear_2022.sh  build_dropbear_vfork.sh  build_musl_dropbear.sh  build_musl_rootfs.sh  build_rootfs.sh  deny.toml  init_shell.c  init_static.c  justfile  make_img.sh  musl-gcc.sh  run_vm.sh  rust-toolchain.toml  setup_init.sh
.cargo/: config.toml
.github/workflows/: ci.yml  kei-lib-ci.yml  pr-title-check.yml  test-multi-arch.yml
board/nanopi-r3s/device-tree/: rk3566-nanopi-r3s.dts
bsp/: Cargo.toml
bsp/bcm2711/src/: lib.rs
bsp/jh7110/: Cargo.toml
bsp/rk3566/: Cargo.toml
bsp/rk3566/src/: gpio.rs  i2c.rs
configs/: default.toml  nanopi-r3s.toml
configs/board/nanopi-r3s/: README.md  armbianEnv.txt  boot.cmd
configs/board/nanopi-r3s/device-tree/: rk3566-nanopi-r3s.dts
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md  aarch64-page-table-activation.md  aarch64-user-init-page-fault.md  arm64-status.md  bsp-guide.md
docs/ar/guides/: deployment.md  upstream-sync.md
docs/en/: SUMMARY.md  arm64-status.md  bsp-guide.md
docs/en/guides/: deployment.md  kei-library.md  upstream-sync.md  wire-protocol-benchmarks.md
docs/es/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/es/guides/: deployment.md  upstream-sync.md
docs/fr/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/fr/guides/: deployment.md  upstream-sync.md
docs/ja/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/ja/guides/: deployment.md  upstream-sync.md
docs/ko/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/ko/guides/: deployment.md  upstream-sync.md
docs/ru/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/ru/guides/: deployment.md  upstream-sync.md
docs/zhs/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/zhs/guides/: deployment.md  upstream-sync.md
docs/zht/: README.md  SUMMARY.md  arm64-status.md  bsp-guide.md
docs/zht/guides/: deployment.md  upstream-sync.md
kernel/: Cargo.toml
kernel/comps/cmdline/src/: dispatch.rs  lib.rs
kernel/comps/console/src/: lib.rs
kernel/comps/display/: Cargo.toml
kernel/comps/display/src/: lib.rs
kernel/comps/display/src/chips/: mod.rs  rk3566.rs
kernel/comps/framebuffer/src/: ansi_escape.rs  console.rs  framebuffer.rs  lib.rs  sixel.rs
kernel/comps/input/src/: lib.rs
kernel/comps/logger/src/: aster_logger.rs  console.rs  lib.rs
kernel/comps/network/src/: driver.rs  lib.rs
kernel/comps/pci/src/: lib.rs
kernel/comps/softirq/src/: lib.rs  taskless.rs
kernel/comps/systree/src/: lib.rs
kernel/comps/time/src/: lib.rs  tsc.rs
kernel/comps/uart/src/: lib.rs
kernel/comps/virtio/: Cargo.toml
kernel/comps/virtio/src/: aarch64_raw_gpu_probe.rs  lib.rs
kernel/comps/virtio/src/device/: mod.rs
kernel/libs/aster-bigtcp/src/: socket_table.rs
kernel/libs/aster-bigtcp/src/iface/: poll.rs
kernel/libs/aster-util/src/: safe_ptr.rs
kernel/libs/comp-sys/component/: README.md
kernel/libs/comp-sys/component/src/: lib.rs
kernel/libs/keyable-arc/src/: lib.rs
kernel/src/: fb_console.rs  fb_console_font.rs  init.rs  lib.rs  serial_console.rs  vbe_dispi.rs  vga_text.rs
kernel/src/arch/x86/: ptrace.rs
kernel/src/device/: fb.rs  mod.rs  shm.rs
kernel/src/device/evdev/: file.rs  mod.rs
kernel/src/device/mem/: file.rs  mod.rs
kernel/src/device/misc/: hwrng.rs  tdxguest.rs
kernel/src/device/pty/: file.rs  ioctl_defs.rs  master.rs  mod.rs
kernel/src/device/registry/: block.rs  mod.rs
kernel/src/device/tty/: device.rs  file.rs  ioctl_defs.rs  mod.rs  serial.rs
kernel/src/device/tty/vt/: file.rs  ioctl_defs.rs
kernel/src/events/: subject.rs
kernel/src/fs/: mod.rs  rootfs.rs
kernel/src/fs/file/: inode_handle.rs
kernel/src/fs/file/inode_attr/: mode.rs
kernel/src/fs/fs_impls/configfs/: test.rs
kernel/src/fs/fs_impls/devpts/: mod.rs  ptmx.rs  slave.rs
kernel/src/fs/pipe/: anon_pipe.rs  common.rs
kernel/src/fs/utils/: systree_inode.rs
kernel/src/net/: mod.rs
kernel/src/net/iface/: init.rs  mod.rs  poll.rs
kernel/src/process/: clone.rs  execve.rs
kernel/src/process/process/: init_proc.rs  terminal.rs
kernel/src/process/process_vm/: heap.rs
kernel/src/process/signal/: c_types.rs  mod.rs  poll.rs
kernel/src/syscall/: clone.rs  ioctl.rs  mmap.rs  mod.rs  open.rs  poll.rs  rt_sigprocmask.rs  rt_sigreturn.rs  setsockopt.rs  symlink.rs  write.rs
kernel/src/thread/: exception.rs  oops.rs  task.rs
kernel/src/thread/work_queue/: work_item.rs
kernel/src/time/: mod.rs  system_time.rs
kernel/src/time/clocks/: system_wide.rs
kernel/src/vm/vmar/: vm_mapping.rs
osdk/src/: util.rs
osdk/src/base_crate/: aarch64.ld.template
ostd/libs/linux-bzimage/setup/: build.rs
ostd/libs/padding-struct/: Cargo.toml
ostd/src/boot/: mod.rs
ostd/src/irq/: mod.rs
ostd/src/mm/frame/: allocator.rs  meta.rs
ostd/src/mm/page_table/: boot_pt.rs
scripts/: build.py  build_desktop_initramfs.py  build_render_initramfs.py  build_x86_64_iso.sh  check_env.py  dev_shell.py  gen_board_config.py  init_idle.c  initramfs.py  make_sdcard.py  ppm_info.py  ppm_to_png.py  pull_arm64.py  run_all_desktops.bat  run_desktop_qemu.bat  run_x86_64_qemu.sh  setup.py  setup_env.py  test.py  test_all_arch.py  test_desktop_render.py  test_desktop_render.sh  vendor_upstream.py  wsl_build_kernels.sh  wsl_probe2.sh  wsl_probe_ram.sh  wsl_qemu_aarch64.sh  wsl_qemu_desktop.sh  wsl_qemu_input_test.sh  wsl_scan_fdt.sh  wsl_test_image.sh  wsl_test_rv64.sh
scripts/tools/: launch_qemu.sh  qemu_args.sh  run_aarch64_mem.sh
scripts/utils/: build_env.py  proxy.py
test/initramfs/: build_aarch64_cpio.py
tests/: e2e_qemu_ignition.sh
tests/initramfs/: build_aarch64_cpio.py  build_aarch64_rootfs.sh  build_x86_64_rootfs.sh
tests/initramfs/src/: init_aarch64  init_render  init_x86_64  kei_desktop  kei_desktop.c  memtest  memtest.c
tools/: make_arm64_image.py  run_aarch64_trace.sh
(+111 files in other folders)
