# The Cargo workspace configuration shared by in-kernel crates.
#
# Most crates in Asterinas are written and built for the kernel space.
# The user-space and host-native exceptions are listed in `workspace.exclude`.

[workspace]
resolver = "2"
# All in-kernel crates.
#
# These crates share a single workspace
# so their `Cargo.toml` files do not need to repeat common settings.
members = [
    "packages/osdk/deps/frame-allocator",
    "packages/osdk/deps/heap-allocator",
    "packages/osdk/deps/test-kernel",
    "packages/ostd",
    "packages/ostd/libs/align_ext",
    "packages/ostd/libs/id-alloc",
    "packages/ostd/libs/int-to-c-enum",
    "packages/ostd/libs/int-to-c-enum/derive",
    "packages/ostd/libs/linux-bzimage/boot-params",
    "packages/ostd/libs/linux-bzimage/builder",
    "packages/ostd/libs/ostd-pod",
    "packages/ostd/libs/ostd-pod/macros",
    "packages/ostd/libs/ostd-macros",
    "packages/ostd/libs/ostd-test",
    "packages/ostd/libs/padding-struct",
    "kernel",
    "kernel/comps/block",
    "kernel/comps/cmdline",
    "kernel/comps/console",
    "kernel/comps/framebuffer",
    "kernel/comps/i8042",
    "kernel/comps/input",
    "kernel/comps/logger",
    "kernel/comps/mlsdisk",
    "kernel/comps/network",
    "kernel/comps/nvme",
    "kernel/comps/pci",
    "kernel/comps/softirq",
    "kernel/comps/systree",
    "kernel/comps/time",
    "kernel/comps/uart",
    "kernel/comps/virtio",
    "kernel/libs/aster-bigtcp",
    "kernel/libs/aster-fuse",
    "kernel/libs/aster-rights",
    "kernel/libs/aster-rights-proc",
    "kernel/libs/aster-util",
    "kernel/libs/atomic-integer-wrapper",
    "kernel/libs/cpio-decoder",
    "kernel/libs/device-id",
    "kernel/libs/io-util",
    "kernel/libs/jhash",
    "kernel/libs/keyable-arc",
    "kernel/libs/logo-ascii-art",
    "kernel/libs/ring-buffer",
    "kernel/libs/typeflags",
    "kernel/libs/typeflags-util",
    "kernel/libs/xarray",
    # ── kei additions: Board Support Packages ──
    "packages/bsp/rk3566",
    "packages/bsp/bcm2711",
    "packages/bsp/jh7110",
]
# All OSDK-based in-kernel crates.
#
# Use `cargo osdk <cmd>` for these crates.
# When adding a workspace crate that depends on OSTD,
# include it in `default-members`
# unless it requires special handling,
# such as only compiling on specific architectures
# or relying on its own Cargo configuration.
default-members = [
    "packages/osdk/deps/frame-allocator",
    "packages/osdk/deps/heap-allocator",
    "packages/osdk/deps/test-kernel",
    "packages/ostd",
    "kernel",
    "kernel/comps/block",
    "kernel/comps/cmdline",
    "kernel/comps/console",
    "kernel/comps/framebuffer",
    "kernel/comps/i8042",
    "kernel/comps/input",
    "kernel/comps/logger",
    "kernel/comps/mlsdisk",
    "kernel/comps/network",
    "kernel/comps/nvme",
    "kernel/comps/pci",
    "kernel/comps/softirq",
    "kernel/comps/systree",
    "kernel/comps/time",
    "kernel/comps/uart",
    "kernel/comps/virtio",
    "kernel/libs/aster-bigtcp",
    "kernel/libs/aster-fuse",
    "kernel/libs/aster-util",
    "kernel/libs/device-id",
    "kernel/libs/io-util",
    "kernel/libs/ring-buffer",
    "kernel/libs/xarray",
]
# All user-space or host-native crates.
#
# Use plain `cargo <cmd>` for these crates.
# Their crate-level `Cargo.toml` files are not affected
# by the shared in-kernel workspace configuration.
exclude = [
    "target",
    "kernel/libs/comp-sys/cargo-component",
    "kernel/libs/comp-sys/component",
    "kernel/libs/comp-sys/component-macro",
    "kernel/libs/comp-sys/controlled",
    "packages/ostd/libs/linux-bzimage/setup",
    "packages/osdk",
    "scripts/tools/sctrace",
    # The no_std bridge library + QEMU demo are separate workspaces
    # (different target: thumbv7em-none-eabi, not aarch64-unknown-none).
    "packages/kei",
    # NixOS test template uses a placeholder package name; not a real crate.
    "tests/nixos/common/template",
]

[workspace.lints.rust]
redundant_imports = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(ktest)'] }
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
inconsistent_struct_constructor = "warn"
redundant_test_prefix = "warn"

# Keys under `workspace.package` and the `package` section of each crate
# follow the ordering suggested at:
# https://github.com/crate-ci/cargo-cargofmt/issues/29#issuecomment-3647516745
#
# FIXME: The current key order is not yet finalized.
# Once `cargo-cargofmt` becomes stable, we will use it to enforce a consistent key order.
[workspace.package]
version = "0.18.0"
repository = "https://github.com/asterinas/asterinas"
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]

# Crates under ostd/libs
align_ext = { path = "packages/ostd/libs/align_ext", version = "0.1.0" }
# Crates under kernel/libs
aster-bigtcp = { path = "kernel/libs/aster-bigtcp" }
# Crates under kernel/comps
aster-block = { path = "kernel/comps/block" }
aster-cmdline = { path = "kernel/comps/cmdline" }
aster-console = { path = "kernel/comps/console" }
aster-framebuffer = { path = "kernel/comps/framebuffer" }
aster-fuse = { path = "kernel/libs/aster-fuse" }
aster-i8042 = { path = "kernel/comps/i8042" }
aster-input = { path = "kernel/comps/input" }
aster-logger = { path = "kernel/comps/logger" }
aster-mlsdisk = { path = "kernel/comps/mlsdisk" }
aster-network = { path = "kernel/comps/network" }
aster-nvme = { path = "kernel/comps/nvme" }
aster-pci = { path = "kernel/comps/pci" }
aster-rights = { path = "kernel/libs/aster-rights" }
aster-rights-proc = { path = "kernel/libs/aster-rights-proc" }
aster-softirq = { path = "kernel/comps/softirq" }
aster-systree = { path = "kernel/comps/systree" }
aster-time = { path = "kernel/comps/time" }
aster-uart = { path = "kernel/comps/uart" }
aster-util = { path = "kernel/libs/aster-util" }
aster-virtio = { path = "kernel/comps/virtio" }
atomic-integer-wrapper = { path = "kernel/libs/atomic-integer-wrapper" }
# Crates under kernel/libs/comp-sys
component = { path = "kernel/libs/comp-sys/component" }
controlled = { path = "kernel/libs/comp-sys/controlled" }
cpio-decoder = { path = "kernel/libs/cpio-decoder" }
device-id = { path = "kernel/libs/device-id" }
id-alloc = { path = "packages/ostd/libs/id-alloc", version = "0.1.0" }
int-to-c-enum = { path = "packages/ostd/libs/int-to-c-enum", version = "0.1.0" }
io-util = { path = "kernel/libs/io-util" }
jhash = { path = "kernel/libs/jhash" }
keyable-arc = { path = "kernel/libs/keyable-arc" }
linux-boot-params = { version = "0.18.0", path = "packages/ostd/libs/linux-bzimage/boot-params" }
logo-ascii-art = { path = "kernel/libs/logo-ascii-art" }
# Crates under osdk/deps
osdk-frame-allocator = { path = "packages/osdk/deps/frame-allocator" }
osdk-heap-allocator = { path = "packages/osdk/deps/heap-allocator" }
ostd = { version = "0.18.0", path = "packages/ostd" }
ostd-macros = { version = "0.18.0", path = "packages/ostd/libs/ostd-macros" }
ostd-pod = { path = "packages/ostd/libs/ostd-pod", version = "0.4.0" }
ostd-test = { version = "0.18.0", path = "packages/ostd/libs/ostd-test" }
ring-buffer = { path = "kernel/libs/ring-buffer" }
typeflags = { path = "kernel/libs/typeflags" }
typeflags-util = { path = "kernel/libs/typeflags-util" }
xarray = { path = "kernel/libs/xarray" }

# External dependencies only for safe crates (i.e., crates under kernel or osdk/deps directories)
#
# Enable `force-soft` feature to disable `AES-NI` and `CLMUL` intrinsics, ensuring that the implementation
# relies solely on software, and in the software implementation, unsafe code is rarely used.
# FIXME: to utilize `AES-NI` and `CLMUL` intrinsics, some specific flags must be added to `RUSTFLAGS`,
# i.e. `-Ctarget-cpu=sandybridge -Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3`.
# This suggests that `Asterinas` should support saving and restoring the `FPU` state within the kernel context,
# a capability it currently lacks.
aes-gcm = { version = "^0.9", features = ["force-soft"] }
# External dependencies only for unsafe crates (i.e., crates under ostd directory)
bit_field = "^0.10"
# External dependencies for both safe and unsafe crates
bitflags = "^1.3"
bittle = "^0.6"
bitvec = { version = "^1.0", default-features = false, features = ["alloc"] }
cfg-if = "^1.0"
const_format = "^0.2"
ctr = "^0.8"
font8x8 = { version = "^0.2", default-features = false, features = [ "unicode" ] }
getset = "^0.1"
gimli = { version = "^0.34", default-features = false, features = ["read-core"] }
hashbrown = { version = "^0.17", features = ["serde"]  }
inherit-methods-macro = { git = "https://github.com/asterinas/inherit-methods-macro", rev = "98f7e3e", version = "0.1.0" }
intrusive-collections = { version = "^0.10", features = ["nightly"] }
inventory = { git = "https://github.com/asterinas/inventory", rev = "9dce587" }
itertools = "^0.10"
lending-iterator = "^0.1"
libflate = { version = "^2.3", default-features = false }
log = "^0.4"
lru = "^0.16"
minicov = "^0.3"
no_std_io2 = { version = "^0.9", default-features = false, features = ["alloc", "nightly"] }
num-traits = { version = "^0.2", default-features = false }
owo-colors = "^4.2"
paste = "^1.0"
postcard = "^1.0"
# Proc-macro dependencies
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
quote = "^1.0"
rand = { version = "^0.9", default-features = false }
serde = { version = "^1.0", default-features = false, features = ["alloc", "derive"] }
smallvec = "^1.13"
smoltcp = { git = "https://github.com/asterinas/smoltcp", tag = "r_2024-11-08_f07e5b5", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
] }
spin = "^0.12"
syn = { version = "^2.0", features = ["full", "parsing", "fold"] }
takeable = "^0.2"
time = { version = "^0.3", default-features = false, features = ["alloc"] }
uart_16550 = "^0.3"
volatile = "^0.6"
x86_64 = "^0.15"
xmas-elf = "^0.10"
# Note: when updating the zerocopy version,
# also update it in `ostd/libs/ostd-pod/README.md`.
zerocopy = { version = "^0.8", features = [ "derive" ] }
zune-inflate = { version = "^0.2", default-features = false, features = ["gzip", "zlib"] }
[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

# Release profile configuration with Link Time Optimization (LTO) enabled.
#
# This profile is optimized for maximum runtime performance,
# (achieving a 2% reduction in latency for the getpid system call).
# However, enabling LTO significantly increases compilation times,
# approximately doubling them compared to when LTO is not enabled.
[profile.release-lto]
inherits = "release"
lto = true
# lto can only be enabled when panic strategy is abort
panic = "abort"
# set codegen-units as the smallest number
codegen-units = 1

# ── Patch: redirect published crates to local workspace versions ──
# Without this, some transitive dependencies pull ostd from crates.io,
# which lacks aarch64 support and causes duplicate compilation.
[patch.crates-io]
ostd = { path = "packages/ostd" }
ostd-pod = { path = "packages/ostd/libs/ostd-pod" }
ostd-macros = { path = "packages/ostd/libs/ostd-macros" }
ostd-test = { path = "packages/ostd/libs/ostd-test" }
# x86_64 0.15.5 (the latest crates.io release) implements
# `Step::forward_overflowing`/`backward_overflowing`, which only exist in
# `core::iter::Step` on nightly >= 2026-07-10. The pinned toolchain
# (nightly-2026-05-01) does not have them, so the crate fails with E0407.
# tdx-guest 0.3.2 requires `~0.15.5`, so an older release cannot be used
# either. Vendor 0.15.5 locally and strip the six offending impls (see
# packages/patches/strip_step_overflowing.py).
x86_64 = { path = "packages/patches/x86_64" }
# NOTE: unwinding is intentionally NOT patched here. All architectures use
# the `=0.2.8` pin from packages/ostd/Cargo.toml, which builds on the pinned
# nightly-2026-05-01 toolchain (the 0.2.10 vendored crate was dropped in
# favor of the pin shared with the riscv64 boot work).
